--- a/templates/home.html
+++ b/templates/home.html
@@ -15,12 +15,9 @@
 	<div id="container">
 	  <textarea class="console" id="console" cols="100" rows="24" autofocus="autofocus">
 (module f
-  (provide [f (int? . -> . int?)])
+  (provide [f (integer? . -> . integer?)])
   (define (f n)
     (/ 1 (- 100 n))))
-(require f)
-
-(• f)
 </textarea>
 
 	  <div id="changer">
