--- a/static/css/tryrkt.css
+++ b/static/css/tryrkt.css
@@ -7,7 +7,7 @@ body {
 
 #wrapper {
  text-align: left;
- width: 1000px;
+ width: 1100px;
  margin: 0 auto;
 }
 
@@ -38,11 +38,15 @@ body {
 }
 
 #console {
-  float:right;
-  width:500px;
+  float:left;
+  width:400px;
  
  background: #eee;
  margin: 10px;
+}
+
+#btn_submit { 
+  float:bottom;
 }
 
 #console div.jquery-console-inner { 
@@ -95,6 +99,11 @@ body {
  padding:0.1em;
 }
 
+.timeout{
+ color:#cb4b16;
+ font-family:monospace;
+ padding:0.1em;
+}
 
 #buttons {
 text-align: left;
@@ -119,8 +128,8 @@ text-align: left;
 }
 
 #changer { 
-float:left;
-width:440px;
+float:right;
+width:640px;
  margin: 10px;
  padding: 0.25em 0.5em 0.25em 0.5em;
  background: #E8E8FF;
