--- a/templates/home.html
+++ b/templates/home.html
@@ -16,13 +16,14 @@
 	  </select>
 	<div id="container">
 	  <textarea class="console" id="console" cols="100" rows="24" autofocus="autofocus">
-(module f
-  (provide [f (integer? . -> . integer?)])
+(module f racket
+  (provide/contract [f (integer? . -> . integer?)])
   (define (f n)
     (/ 1 (- 100 n))))</textarea>
 
 	  <div id="changer">
-	    <button id="btn_submit" autofocus="autofocus" type="button" onclick="check()">Check</button>
+	    <button id="btn_submit" autofocus="autofocus" type="button" onclick="check()">Verify</button>
+	    <button id="btn_run" type="button" onclick="run()">Run</button>
 	    <p class="bottom">Enter a program on the left to verify.</p>
 	    <div id="changer_result" class="jquery-console-message"></div>
 	  </div>
