--- a/static/css/tryrkt.css
+++ b/static/css/tryrkt.css
@@ -167,3 +167,18 @@ div.footer {
  text-align: center; 
 }
 
+#about {
+  text-align: left;
+  float:left;
+  width: 640px;
+  margin: 10px;
+  padding: 0.25em 0.5em 0.25em 0.5em;
+}
+
+#doc {
+  margin: 10px;
+  padding: 0.25em 0.5em 0.25em 0.5em;
+  background: #eeeeee;
+  color: #333333;
+}
+
