disable `Run` button for now

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
 
 	  <div id="changer">
 	    <button id="btn_submit" autofocus="autofocus" type="button" onclick="check()">Verify</button>
-	    <button id="btn_run" type="button" onclick="run()">Run</button>
+	    <!--<button id="btn_run" type="button" onclick="run()">Run</button> -->
 	    <p class="bottom">Enter a program on the left to verify.</p>
 	    <div id="changer_result" class="jquery-console-message"></div>
 	  </div>
@@ -34,7 +34,7 @@
 
     <div id="about">
       <p>
-      This is an online demonstration of our
+      This is a demonstration of our
       <a href="http://dl.acm.org/citation.cfm?id=2628156">work</a>
       <a href="http://arxiv.org/abs/1411.3967">in progress</a> on contract verification
       that generates counterexamples for higher-order functional programs.
