run concrete program in Racket

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
 
 	  <div id="changer">
 	    <button id="btn_submit" autofocus="autofocus" type="button" onclick="check()">Verify</button>
-	    <!--<button id="btn_run" type="button" onclick="run()">Run</button> -->
+	    <button id="btn_run" type="button" onclick="run()">Run</button>
 	    <p class="bottom">Enter a program on the left to verify.</p>
 	    <div id="changer_result" class="jquery-console-message"></div>
 	  </div>
