--- a/static/css/tryrkt.css
+++ b/static/css/tryrkt.css
@@ -176,8 +176,11 @@ div.footer {
 }
 
 #doc {
+  text-align: left;
+  align: left;
+  float: left;
   margin: 10px;
-  padding: 0.25em 0.25em 0.25em 0.25em;
+  padding: 0.5em 0.5em 0.5em 0.5em;
   background: #eeeeee;
   color: #333333;
 }
