--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Try Racket</title>
+    <title>Try SCV</title>
     <link href="/css/tryrkt.css" rel="stylesheet" type="text/css">
     <link href="/css/gh-fork-ribbon.css" rel="stylesheet" type="text/css">
   </head>
@@ -32,7 +32,15 @@
       This is a demonstration of our
       <a href="http://dl.acm.org/citation.cfm?id=2628156">work</a>
       <a href="http://arxiv.org/abs/1411.3967">in progress</a> on contract verification
-      that generates counterexamples for higher-order functional programs.
+      that generates counterexamples for higher-order functional programs
+      using symbolic execution.
+      </p>
+      <p>This tool verifies a module's correctness up to contracts,
+	which include explicit declarations as well as implicit ones
+	for primitive operations.
+	Verified modules are guaranteed to be safe under all contexts.
+	In addition, for each error that the module can actually cause,
+	the tool generates a concrete input that really triggers it.
       </p>
       <p> We currently support a small functional subset of Racket:</p>
 
