--- a/templates/home.html
+++ b/templates/home.html
@@ -35,14 +35,17 @@
       that generates counterexamples for higher-order functional programs
       using symbolic execution.
       </p>
-      <p>This tool verifies a module's correctness up to contracts,
+      <p>This tool verifies a module's correctness with respect to contracts,
 	which includes explicit declarations as well as implicit ones
 	for primitive operations.
 	Verified modules are guaranteed to be safe under all contexts.
-	In addition, for each error that the module can actually cause,
+	In addition, for each error that the module may actually cause,
 	the tool generates a concrete input that triggers it.
       </p>
-      <p> We currently support a small functional subset of Racket:</p>
+      <p> To try the tool, enter a program to the left and press <code>Verify</code>
+	to run the verification, or <code>Run</code> to run it as a regular Racket program.
+	Select an example program from the top-left menu to load it.
+	We currently support a small functional subset of Racket:</p>
 
       <div id="doc">
 	<pre>
