deprecate/undocument `provide/contract`; update examples

--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,7 @@
 	<pre>
 program          ::= (sub-module-form …)
 sub-module-form  ::= (<b>module</b> module-name <b>racket</b>
-                       (<b>provide/contract</b> provide-spec …)
+                       (<b>provide</b> (<b>contract-out</b> provide-spec …))
                        (<b>require</b> require-spec …)
                        (<b>struct</b> id (id …)) …
                        (<b>define</b> id value) …)
