remove wrong parens in grammar, fix #16

--- a/templates/home.html
+++ b/templates/home.html
@@ -45,7 +45,7 @@
 
       <div id="doc">
 	<pre>
-program          ::= (sub-module-form …)
+program          ::= sub-module-form …
 sub-module-form  ::= (<b>module</b> module-name <b>racket</b>
                        (<b>provide</b> provide-spec …)
                        (<b>require</b> require-spec …)
