--- a/templates/home.html
+++ b/templates/home.html
@@ -1,80 +1,87 @@
 <html>
   <head>
-    <title>Try SCV</title>
-    <link href="/css/tryrkt.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/codemirror.css">
+    <link rel="stylesheet" href="/css/tryrkt.css" type="text/css">
     <link href="/css/gh-fork-ribbon.css" rel="stylesheet" type="text/css">
-  </head>
-  <body onload="loadExamples()">
-    <div id="wrapper">
-      <div id="content">
-	<select id="examples" onChange="loadExample(this.options[this.selectedIndex].text)">
-	  </select>
-	<div id="container">
-	  <textarea class="console" id="console" cols="100" rows="24" autofocus="autofocus"></textarea>
-
-	  <div id="changer">
-	    <button id="btn_submit" autofocus="autofocus" type="button" onclick="check()">Verify</button>
-	    <button id="btn_run" type="button" onclick="run()">Run</button>
-	    <p class="bottom">Enter a program on the left to verify.</p>
-	    <div id="changer_result" class="jquery-console-message"></div>
-	  </div>
-	</div>
-	<div class="footer"><p class="bottom"></p></div>
-      </div>
-    </div>
-
-    <div id="about">
-      <p>
-      This is a demonstration of our
-      <a href="http://dl.acm.org/citation.cfm?id=2628156">work</a>
-      <a href="http://arxiv.org/abs/1411.3967">in progress</a> on contract verification
-      that generates counterexamples for higher-order functional programs
-      using symbolic execution.
-      </p>
-      <p>This tool verifies a module's correctness with respect to contracts,
-	which includes explicit declarations as well as implicit ones
-	for primitive operations.
-	Verified modules are guaranteed to be safe under all contexts.
-	In addition, for each error that the module may actually cause,
-	the tool generates a concrete input that triggers it.
-      </p>
-      <p> To try the tool, enter a program to the left and press <code>Verify</code>
-	to run the verification, or <code>Run</code> to run it as a regular Racket program.
-	Select an example program from the top-left menu to load it.
-	We currently support a small functional subset of Racket:</p>
-
-      <div id="doc">
-	<pre>
-program          ::= sub-module-form …
-                   | sub-module-form … (require 'id …) expr …
-sub-module-form  ::= (<b>module</b> module-name <b>racket</b>
-                       (<b>provide</b> provide-spec …)
-                       (<b>require</b> require-spec …)
-                       (<b>struct</b> id (id …)) …
-                       (<b>define</b> id value) …)
-provide-spec     ::= id | (contract-out p/c-item …)
-p/c-item         ::= (id contract) | (<b>struct</b> id ([id contract] …))
-require-spec     ::= (<b>submod</b> <b>".."</b> module-name)
-expr             ::= value | id | (<b>if</b> expr expr expr) | (expr expr …)
-value            ::= number | boolean | string | symbol
-                   | op | (<b>lambda</b> (id …) expr)
-contract         ::= expr | <b>any/c</b> | (<b>or/c</b> contract …) | (<b>and/c</b> contract …)
-                   | (<b>list/c</b> contract) | (<b>listof</b> contract)
-                   | (<b>struct/c</b> id contract …)
-                   | (<b>->i</b> ([id contract] …₁) (res (id …₁) contract))
-op               ::= <b>+</b> | <b>-</b> | <b>*</b> | <b>/</b> | <b>string-length</b>
-                   | <b>number?</b> | <b>real?</b> | <b>integer?</b> | <b>boolean?</b> | <b>false?</b>
-                   | <b>cons?</b> | <b>empty?</b>
-	</pre>
-      </div>
-
-    </div>
-
+    <script src="/js/codemirror.js"></script>
+    <script src="/js/matchbrackets.js"></script>
+    <script src="/js/racket.js"></script>
     <script src="/js/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="/js/jquery.console.js" type="text/javascript"></script>
     <script src="/js/tryrkt.js" type="text/javascript"></script>
     <script type="text/javascript">
       evalUrl = "@url";
     </script> 
+    <title>Try SCV</title>
+  </head>
+  <body onload="loadExamples()">
+    <div id="wrapper">
+      <div id="content">
+        <select id="examples" onChange="loadExample(this.options[this.selectedIndex].text)"></select>
+        <div id="container">
+             <form>
+              <div style="border-top: 1px solid black; border-bottom: 1px solid black;">
+                <textarea id="code" cols="120" rows="30" name="code"></textarea>
+              </div>
+            </form>
+          <div id="changer">
+            <button id="btn_submit" autofocus="autofocus" type="button" onclick="copy();check()">Verify</button>
+            <button id="btn_run" type="button" onclick="copy();run()">Run</button>
+            <p class="bottom">Enter a program on the left to verify.</p>
+            <div id="changer_result" class="jquery-console-message"></div>
+          </div>
+        </div>
+      <div class="footer"><p class="bottom"></p></div>
+    </div>
+    <div id="about">
+      <p>
+        This is a demonstration of our
+        <a href="http://dl.acm.org/citation.cfm?id=2628156">work</a>
+        <a href="http://arxiv.org/abs/1411.3967">in progress</a> on contract verification
+        that generates counterexamples for higher-order functional programs
+        using symbolic execution.
+      </p>
+      <p>
+        This tool verifies a module's correctness with respect to contracts,
+        which includes explicit declarations as well as implicit ones
+        for primitive operations.
+        Verified modules are guaranteed to be safe under all contexts.
+        In addition, for each error that the module may actually cause,
+        the tool generates a concrete input that triggers it.
+      </p>
+      <p> 
+        To try the tool, enter a program to the left and press <code>Verify</code>
+        to run the verification, or <code>Run</code> to run it as a regular Racket program.
+        Select an example program from the top-left menu to load it.
+        We currently support a small functional subset of Racket:
+      </p>
+      <div id="doc">
+        <pre>
+          program          ::= (sub-module-form …)
+          sub-module-form  ::= (<b>module</b> module-name <b>racket</b>
+                                 (<b>provide</b> provide-spec …)
+                                 (<b>require</b> require-spec …)
+                                 (<b>struct</b> id (id …)) …
+                                 (<b>define</b> id value) …)
+          provide-spec     ::= id | (contract-out p/c-item …)
+          p/c-item         ::= (id contract) | (<b>struct</b> id ([id contract] …))
+          require-spec     ::= (<b>submod</b> <b>".."</b> module-name)
+          expr             ::= value | id | (<b>if</b> expr expr expr) | (expr expr …)
+          value            ::= number | boolean | string | symbol
+                             | op | (<b>lambda</b> (id …) expr)
+          contract         ::= expr | <b>any/c</b> | (<b>or/c</b> contract …) | (<b>and/c</b> contract …)
+                             | (<b>list/c</b> contract) | (<b>listof</b> contract)
+                             | (<b>struct/c</b> id contract …)
+                             | (<b>->i</b> ([id contract] …₁) (res (id …₁) contract))
+          op               ::= <b>+</b> | <b>-</b> | <b>*</b> | <b>/</b> | <b>string-length</b>
+                             | <b>number?</b> | <b>real?</b> | <b>integer?</b> | <b>boolean?</b> | <b>false?</b>
+                             | <b>cons?</b> | <b>empty?</b>
+        </pre>
+      </div>
+    </div>
+    <script type="text/javascript">
+      var myCodeMirror = CodeMirror.fromTextArea(code, {lineNumbers: true, matchBrackets: true});
+    </script>
+    <textarea id="console" cols="120" rows="30" name="console" style="display:none;"></textarea>
   </body>
 </html>
