--- a/static/css/tryrkt.css
+++ b/static/css/tryrkt.css
@@ -7,7 +7,7 @@ body {
 
 #wrapper {
  text-align: left;
- width: 1100px;
+ width: 1600px;
  margin: 0 auto;
 }
 
@@ -20,8 +20,8 @@ body {
 }
 
 #header h1 {
- height: 147px;
- line-height: 147px;
+ height: 70px;
+ line-height: 70px;
  margin: 0;
  padding: 0;
  padding-left: 85px;
@@ -37,9 +37,9 @@ body {
   outline:none;
 }
 
-#console {
+#container {
   float:left;
-  width:400px;
+  width:710px;
  
  background: #eee;
  margin: 10px;
@@ -128,7 +128,7 @@ text-align: left;
 }
 
 #changer { 
-float:right;
+float:left;
 width:640px;
  margin: 10px;
  padding: 0.25em 0.5em 0.25em 0.5em;
@@ -176,7 +176,7 @@ div.footer {
 }
 
 #doc {
-  text-align: left;
+  text-align: rigt;
   align: left;
   float: left;
   margin: 10px;
