--- a/static/css/tryrkt.css
+++ b/static/css/tryrkt.css
@@ -45,6 +45,10 @@ body {
  margin: 10px;
 }
 
+#examples{
+  text-align: right;
+}
+
 #btn_submit { 
   float:bottom;
 }
@@ -163,8 +167,18 @@ div.continue {
  padding-top: 0.5em; 
 }
 
-div.footer { 
- text-align: center; 
+#footer { 
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 30px;
+  text-align: center;
+  background: #f5f5f5;
+  font-family: Arial, sans-serif;
+  font-size: 8pt;
+  color: #000000;
+
 }
 
 #about {
@@ -176,11 +190,10 @@ div.footer {
 }
 
 #doc {
-  text-align: rigt;
-  align: left;
+  text-align: left;
   float: left;
-  margin: 10px;
-  padding: 0.5em 0.5em 0.5em 0.5em;
+  margin: 0px;
+  padding: 0.25em 0.5em 0.5em 0.5em;
   background: #eeeeee;
   color: #333333;
 }
