--- a/static/css/tryrkt.css
+++ b/static/css/tryrkt.css
@@ -11,20 +11,22 @@ body {
  margin: 0 auto;
 }
 
-#header {
- background: #000;
- font-family: Optima, Arial, sans-serif;
- font-weight: bold;
- padding: 0 0 5px 0;
- color: #fff;
+#header
+{
+  width: 100%;
+  height: 60px;
+  background: #000000;
+  color: #ffffff;
 }
 
 #header h1 {
- height: 70px;
- line-height: 70px;
+ height: 60px;
+ line-height: 60px;
+ font-size: 20;
  margin: 0;
  padding: 0;
- padding-left: 85px;
+ padding-right: 100px;
+ padding-top: 10px;
 }
 
 #header h1 span{
@@ -35,6 +37,29 @@ body {
   text-decoration:none;
   color:#fff;
   outline:none;
+}
+
+#logo
+{
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  color: #fff;
+  width:40%;
+  height:40px;
+  font-size: 40;
+  float:left;
+  padding-top: 15px
+}
+
+#menu
+{
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  color: #fff;
+  width:40%;
+  height:40px;
+  float:right;
+  font-size: 30;
 }
 
 #container {
@@ -132,11 +157,12 @@ text-align: left;
 }
 
 #changer { 
-float:left;
-width:640px;
- margin: 10px;
- padding: 0.25em 0.5em 0.25em 0.5em;
- background: #E8E8FF;
+  float:left;
+  width: 673px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 0.25em 0.25em 0.25em 0.25em;
+  background: #E8E8FF;
 }
 
 #changer h3 {
@@ -144,7 +170,7 @@ width:640px;
 }
 
 #changer p {
- background: transparent
+ background: transparent;
  font-family: serif;
  color: #262680;
 }
@@ -154,7 +180,7 @@ width:640px;
   white-space: pre;
   color: #444;
   font-family: monospace;
-  padding: 0.1em 0.25em 0.2em 0.25em;
+  padding: 0.25em 0.25em 0.25em 0.25em;
 }
 
 #changer code.expr { 
@@ -167,34 +193,23 @@ div.continue {
  padding-top: 0.5em; 
 }
 
-#footer { 
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 30px;
-  text-align: center;
-  background: #f5f5f5;
-  font-family: Arial, sans-serif;
-  font-size: 8pt;
-  color: #000000;
-
-}
-
 #about {
   text-align: left;
-  float:left;
-  width: 640px;
-  margin: 10px;
-  padding: 0.25em 0.5em 0.25em 0.5em;
+  background: #fff;
+  width: 50%;
+  float: left;
+  padding-left: 25%;
+  padding-top: 10%;
+  margin: 0;
 }
 
 #doc {
   text-align: left;
   float: left;
   margin: 0px;
-  padding: 0.25em 0.5em 0.5em 0.5em;
+  padding: 0.25em 0.25em 0.25em 0.25em;
   background: #eeeeee;
   color: #333333;
 }
+
 
