--- a/templates/about.html
+++ b/templates/about.html
@@ -1,14 +1,45 @@
-<p class="bottom">
-Welcome to Try Racket - a quick tour of Racket for absolute beginners.
-</p>
-<p class="bottom">
-	 Here is our only disclaimer: this site is an introduction to Racket, not a Racket REPL. 
-	 You won't be able to do everything in it that you could do in your local interpreter. 
-	 <!-- Also, the interpreter deletes the data that you enter if you define too many things, or after 15 minutes. -->
-</p>
-<p class="bottom">
-   "Try Racket" is written in Racket and JavaScript with
-   Chris Done's <a href="https://github.com/chrisdone/jquery-console">jquery-console</a>.
-   It borrows a lot of code and content from <a href="http://www.tryclj.com/">Try Clojure</a> and <a href="https://github.com/samth/paste.rkt">paste.rkt</a>.
-   Hosting is provided by John Berry, who is also the current maintainer of the project. 
-</p>
+<html>
+  <head>
+    <link rel="stylesheet" href="/css/tryrkt.css" type="text/css">
+    <link href="/css/gh-fork-ribbon.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript">
+      evalUrl = "@url";
+    </script> 
+    <title>Try SCV</title>
+  </head>
+  <body onload="loadExamples()">
+    <div id="header">
+      <div id="logo">
+        SCV Racket
+      </div>
+      <div id="links">
+        <h1>
+        <a href="/">Try</a>&nbsp&nbsp&nbsp&nbsp&nbsp
+        <a href="/about.html">About</a></h1>
+      </div>
+    </div>
+    <div id="about">
+      <p>
+        This is a demonstration of our
+        <a href="http://dl.acm.org/citation.cfm?id=2628156">work</a>
+        <a href="http://arxiv.org/abs/1411.3967">in progress</a> on contract verification
+        that generates counterexamples for higher-order functional programs
+        using symbolic execution.
+      </p>
+      <p>
+        This tool verifies a module's correctness with respect to contracts,
+        which includes explicit declarations as well as implicit ones
+        for primitive operations.
+        Verified modules are guaranteed to be safe under all contexts.
+        In addition, for each error that the module may actually cause,
+        the tool generates a concrete input that triggers it.
+      </p>
+      <p> 
+        To try the tool, enter a program to the left and press <code>Verify</code>
+        to run the verification, or <code>Run</code> to run it as a regular Racket program.
+        Select an example program from the top-left menu to load it.
+        We currently support a small functional subset of Racket:
+      </p>
+    </div>
+  </body>
+</html>
