--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,14 @@
   </head>
   <body onload="loadExamples()">
     <div id="header">
-      <h1>SCV Racket</h1>
+      <div id="logo">
+        SCV Racket
+      </div>
+      <div id="links">
+        <h1>
+        <a href="/">Try</a>&nbsp&nbsp&nbsp&nbsp&nbsp
+        <a href="/about.html">About</a></h1>
+      </div>
     </div>
     <div id="wrapper">
       <div id="container">
@@ -32,28 +39,6 @@
           <div id="changer_result" class="jquery-console-message"></div>
           <!-- <button id="btn_copy" type="button" onclick="counterexample();copy()">Copy to Editor</button> -->
       </div>
-    <div id="about">
-      <p>
-        This is a demonstration of our
-        <a href="http://dl.acm.org/citation.cfm?id=2628156">work</a>
-        <a href="http://arxiv.org/abs/1411.3967">in progress</a> on contract verification
-        that generates counterexamples for higher-order functional programs
-        using symbolic execution.
-      </p>
-      <p>
-        This tool verifies a module's correctness with respect to contracts,
-        which includes explicit declarations as well as implicit ones
-        for primitive operations.
-        Verified modules are guaranteed to be safe under all contexts.
-        In addition, for each error that the module may actually cause,
-        the tool generates a concrete input that triggers it.
-      </p>
-      <p> 
-        To try the tool, enter a program to the left and press <code>Verify</code>
-        to run the verification, or <code>Run</code> to run it as a regular Racket program.
-        Select an example program from the top-left menu to load it.
-        We currently support a small functional subset of Racket:
-      </p>
       <div id="doc">
         <pre>
           program          ::= (sub-module-form …)
@@ -77,7 +62,6 @@
                              | <b>cons?</b> | <b>empty?</b>
         </pre>
       </div>
-    </div>
     <script type="text/javascript">
       var myCodeMirror = CodeMirror.fromTextArea(code, {
         lineNumbers: true, 
@@ -87,10 +71,5 @@
       });
     </script>
     <textarea id="console" cols="120" rows="30" name="console" style="display:none;"></textarea>
-    <div id="footer"><p>
-      <a href="http://racket-lang.org/">RACKET</a>&nbsp&nbsp&nbsp&nbsp&nbsp
-      <a href="https://www.cs.umd.edu/~dvanhorn/">DVH</a>&nbsp&nbsp&nbsp&nbsp&nbsp
-      <a href="https://github.com/plum-umd/try-scv-racket">CODE</a>
-    </p></div>
   </body>
 </html>
