Fix about page.

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,12 +2,9 @@
   <head>
     <link rel="stylesheet" href="/css/tryrkt.css" type="text/css">
     <link href="/css/gh-fork-ribbon.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript">
-      evalUrl = "@url";
-    </script> 
     <title>Try SCV</title>
   </head>
-  <body onload="loadExamples()">
+  <body>
     <div id="header">
       <div id="logo">
         SCV Racket
