--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
       <div id="links">
         <h1>
         <a href="/">Try</a>&nbsp&nbsp&nbsp&nbsp&nbsp
-        <a href="/about.html">About</a></h1>
+        <a href="/about">About</a></h1>
       </div>
     </div>
     <div id="about">
