--- a/static/css/tryrkt.css
+++ b/static/css/tryrkt.css
@@ -7,30 +7,18 @@ body {
 
 #wrapper {
  text-align: left;
- width: 1600px;
  margin: 0 auto;
 }
 
 #header
 {
   width: 100%;
-  height: 60px;
   background: #000000;
   color: #ffffff;
 }
 
-#header h1 {
- height: 60px;
- line-height: 60px;
- font-size: 20;
- margin: 0;
- padding: 0;
- padding-right: 100px;
- padding-top: 10px;
-}
 
 #header h1 span{
- display:inline;
 }
 
 #header h1 a {
@@ -44,30 +32,26 @@ body {
   font-family: Arial, sans-serif;
   font-weight: bold;
   color: #fff;
-  width:40%;
   height:40px;
   font-size: 40;
-  float:left;
   padding-top: 15px
+  padding-left: 200px;
 }
+
 
 #menu
 {
   font-family: Arial, sans-serif;
   font-weight: bold;
   color: #fff;
-  width:40%;
   height:40px;
-  float:right;
   font-size: 30;
 }
 
 #container {
-  float:left;
   width:710px;
  
  background: #eee;
- margin: 10px;
 }
 
 #examples{
@@ -162,8 +146,7 @@ text-align: left;
 }
 
 #changer { 
-  float:left;
-  width: 673px;
+  width: 700px;
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 0.25em 0.25em 0.25em 0.25em;
@@ -199,8 +182,7 @@ div.continue {
 }
 
 #instructions {
-  float:left;
-  width: 673px;
+  width: 700px;
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 0.25em 0.25em 0.25em 0.25em;
@@ -211,15 +193,14 @@ div.continue {
   text-align: left;
   background: #fff;
   width: 50%;
-  float: left;
+  padding-right: 25%;
   padding-left: 25%;
-  padding-top: 5%;
+  padding-top: 20px;
   margin: 0;
 } 
 
 #example_text {
-  float:left;
-  width: 673px;
+  width: 700px;
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 0.25em 0.25em 0.25em 0.25em;
