--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
         <a href="/about">About</a></h1>
       </div>
     </div>
-    <div id="wrapper">
+    <div id="about">
       <div id="container">
           Examples: <select id="examples" onChange="loadExample(this.options[this.selectedIndex].text)"></select>           
           <form>
