--- a/static/css/tryrkt.css
+++ b/static/css/tryrkt.css
@@ -149,7 +149,7 @@ text-align: left;
   width: 700px;
   margin-top: 10px;
   margin-bottom: 10px;
-  padding: 0.25em 0.25em 0.25em 0.25em;
+  padding: 10px;
   background: #E8E8FF;
 }
 
@@ -192,11 +192,10 @@ div.continue {
 #about {
   text-align: left;
   background: #fff;
-  width: 50%;
-  padding-right: 25%;
-  padding-left: 25%;
+  width: 700px;
   padding-top: 20px;
-  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
 } 
 
 #example_text {
