--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
       <h3>About SCV Racket</h3>
       <p>
         This web page provides a demonstration of our work in progress
-        on contract verification and counterexample for higher-order
+        on contract verification and counterexample generation for higher-order
         functional programs using symbolic execution.
       </p>
       <p>
