no longer use `send/suspend/dispatch`

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
     <script src="/js/jquery.console.js" type="text/javascript"></script>
     <script src="/js/tryrkt.js" type="text/javascript"></script>
     <script type="text/javascript">
-      evalUrl = "@url";
+      evalUrl = "/eval";
     </script> 
     <title>Try SCV</title>
   </head>
