--- a/static/css/tryrkt.css
+++ b/static/css/tryrkt.css
@@ -111,10 +111,18 @@ body {
  white-space: pre;
 }
 
+.print{
+ color:#810084;
+ font-family:monospace;
+ padding:0.1em;
+ white-space: pre;
+}
+
 .value{
  color:#0066FF;
  font-family:monospace;
  padding:0.1em;
+ white-space: pre;
 }
 
 .timeout{
