--- a/templates/about.html
+++ b/templates/about.html
@@ -24,7 +24,7 @@
       </p>
       <p>
         This tool verifies a module's correctness with respect to contracts,
-        which includes explicit declarations as well as implicit ones asdasdasdsad
+        which includes explicit declarations as well as implicit ones
         for primitive operations.
         Verified modules are guaranteed to be safe under all contexts.
         In addition, for each error that the module may actually cause,
